# EcoTracker

./: .gitignore  CMakeLists.txt  EcoTrackerExtern.cc  EcoTrackerExtern.hpp  README.md  debug.hpp  eco.cc  eco.hpp  feature_extractor.cc  feature_extractor.hpp  fhog.hpp  gradient.hpp  interpolator.hpp  makefile  metrics.cc  metrics.hpp  recttools.hpp  scale_filter.hpp  training.hpp  vot_eco.cpp
look_tables/: CNnorm.txt  intensityChannelNorm11.txt  intensityChannelNorm16.txt  intensityChannelNorm6.txt
model/: imagenet-vgg-m-2048.prototxt  imagenet-vgg-m-2048.prototxt.origin
